--- a/core/templates/front-end/parts/topbar.html
+++ b/core/templates/front-end/parts/topbar.html
@@ -8,9 +8,9 @@
       <div class="social-links">
 <!--        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>-->
 <!--        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>-->
-        <a href="#" class="instagram"><i class="icofont-globe" style="margin-right:3px"></i>Global | English</a>
-        <a href="#" class="skype"><i class=""></i>|</a>
-        <a href="#" class="linkedin"><i class="icofont-folder" style="color:#cc1616; margin-right:3px"></i><i/>RED FOLDER</a>
+        <a href="#" class="" style="color:white"><i class="icofont-globe" style="margin-right:3px"></i>Global | English</a>
+        <a href="#" class="" style="color:white"><i class=""></i>|</a>
+        <a href="#" class="" style="color:white"><i class="icofont-folder" style="color:#cc1616; margin-right:3px"></i><i/>RED FOLDER</a>
       </div>
     </div>
   </div>
