--- a/core/templates/front-end/parts/sidebar-menu.html
+++ b/core/templates/front-end/parts/sidebar-menu.html
@@ -14,7 +14,7 @@
 .openbtn:hover {
   background-color: #444;
 }
-.sidebar {
+.sidebarmenu {
   height: 100%;
   width: 0;
   position: fixed;
@@ -27,7 +27,7 @@
   padding-top: 60px;
 }
 
-.sidebar a {
+.sidebarmenu a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
@@ -36,11 +36,11 @@
   transition: 0.3s;
 }
 
-.sidebar a:hover {
+.sidebarmenu a:hover {
   color: #f1f1f1;
 }
 
-.sidebar .closebtn {
+.sidebarmenu .closebtn {
   position: absolute;
   top: 0;
   right: 25px;
@@ -69,19 +69,19 @@
   .sidebar a {font-size: 18px;}
 }
 </style>
-<div id="mySidebar" class="sidebar">
+<div id="mySidebar" class="sidebarmenu">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 <!--  <a href="#">About</a>-->
 <!--  <a href="#">Services</a>-->
 <!--  <a href="#">Clients</a>-->
 <!--  <a href="#">Contact</a>-->
-  <a href="index.html">Home</a>
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#portfolio">Portfolio</a>
+  <a href="/">Home</a>
+  <a href="/#about">About</a>
+  <a href="/#services">Services</a>
+  <a href="/#portfolio">Portfolio</a>
   <a href="/insights">Insights</a>
-  <a href="#pricing">Pricing</a>
-  <a href="#team">Team</a>
-  <a href="#contact">Contact</a>
+  <a href="/#pricing">Pricing</a>
+  <a href="/#team">Team</a>
+  <a href="/#contact">Contact</a>
 
 </div>
