--- a/core/templates/front-end/template.html
+++ b/core/templates/front-end/template.html
@@ -38,8 +38,14 @@
   ======================================================== -->
 </head>
 
-<body class="skin-orange">
-  <div id="main">
+<body>
+
+<!-- ======= Sidebar menu ======= -->
+{% include "front-end/parts/sidebar-menu.html" %}
+<!-- ======= sidebar menu end ======= -->
+
+<div id="main">
+
     {% include "front-end/parts/topbar.html" %}
     {% include "front-end/parts/header.html" %}
 
