--- a/core/templates/front-end/parts/header.html
+++ b/core/templates/front-end/parts/header.html
@@ -1,12 +1,5 @@
-
-<!-- ======= Sidebar menu ======= -->
-{% include "front-end/parts/sidebar-menu.html" %}
-<!-- ======= sidebar menu end ======= -->
 <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
-    <div class="navcolaps">
-
-    </div>
     <div class="container d-flex align-items-center">
     <button class="openbtn" onclick="openNav()">☰</button>
       <h1 class="logo mr-auto"><a href="index.html">Day</a></h1>
@@ -16,12 +9,12 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="/#about">About</a></li>
+          <li><a href="/#services">Services</a></li>
+          <li><a href="/#portfolio">Portfolio</a></li>
           <li><a href="/insights">Insights</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="/#pricing">Pricing</a></li>
+          <li><a href="/#team">Team</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -39,7 +32,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="/#contact">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
