--- a/core/templates/front-end/insights/index.html
+++ b/core/templates/front-end/insights/index.html
@@ -92,7 +92,7 @@
 										<article class="article col-md-12">
 										<div class="inner">
 											<figure>
-												<a href="single.html">
+												<a href={% url 'insight_post_page' art.id  %}>
 													<img src={{art.image.url}} alt="Sample Article">
 												</a>
 											</figure>
@@ -101,11 +101,11 @@
 													<div class="time">{{art.date}}</div>
 													<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 												</div>
-												<h2><a href="single.html">Duis aute irure dolor in reprehenderit in voluptate</a></h2>
+												<h2><a href={% url 'insight_post_page' art.id  %}>Duis aute irure dolor in reprehenderit in voluptate</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="single.html">
+													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
@@ -122,7 +122,7 @@
 										<article class="article col-md-12">
 										<div class="inner">
 											<figure>
-												<a href="single.html">
+												<a href={% url 'insight_post_page' art.id  %}>
 													<img src={{art.image.url}} alt="Sample Article">
 												</a>
 											</figure>
@@ -131,11 +131,11 @@
 													<div class="time">{{art.date}}</div>
 													<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 												</div>
-												<h2><a href="single.html">Duis aute irure dolor in reprehenderit in voluptate</a></h2>
+												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="single.html">
+													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
@@ -189,12 +189,12 @@
 									<article class="article-mini">
 										<div class="inner">
 											<figure>
-												<a href="single.html">
+												<a href={% url 'insight_post_page' art.id  %}>
 													<img src={{art.image.url}} alt="Sample Article">
 												</a>
 											</figure>
 											<div class="padding">
-												<h1><a href="single.html">{{art.title|truncatechars:50}}</a></h1>
+												<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h1>
 												<div class="detail">
 													<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 													<div class="time">{{art.date}}</div>
@@ -214,7 +214,7 @@
 							<article class="col-md-12 article-list">
 								<div class="inner">
 									<figure>
-										<a href="single.html">
+										<a href={% url 'insight_post_page' art.id  %}>
 											<img src={{art.image.url}} alt="Sample Article">
 										</a>
 									</figure>
@@ -225,11 +225,11 @@
 											</div>
 											<div class="time">{{art.date}}</div>
 										</div>
-										<h1><a href="single.html">{{art.title}}</a></h1>
+										<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title}}</a></h1>
 										<p>{{art.body|truncatechars:100}}</p>
 										<footer>
 											<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>273</div></a>
-											<a class="btn btn-primary more" href="single.html">
+											<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 												<div>More</div>
 												<div><i class="ion-ios-arrow-thin-right"></i></div>
 											</a>
@@ -249,12 +249,12 @@
 								<article class="article-mini">
 									<div class="inner">
 										<figure>
-											<a href="single.html">
+											<a href={% url 'insight_post_page' art.id  %}>
 												<img src={{art.image.url}} alt="Sample Article">
 											</a>
 										</figure>
 										<div class="padding">
-											<h1><a href="single.html">{{art.title|truncatechars:50}}</a></h1>
+											<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h1>
 										</div>
 									</div>
 								</article>
@@ -298,7 +298,7 @@
 										<article class="article-fw">
 											<div class="inner">
 												<figure>
-													<a href="single.html">
+													<a href={% url 'insight_post_page' art.id  %}>
 														<img src="{{art.image.url}}" alt="Sample Article">
 													</a>
 												</figure>
@@ -307,7 +307,7 @@
 														<div class="time">art.date</div>
 														<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 													</div>
-													<h1><a href="single.html">{{art.title|truncatechars:45}}</a></h1>
+													<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:45}}</a></h1>
 													<p>{{art.body|truncatechars:80}}</p>
 												</div>
 											</div>
@@ -317,12 +317,12 @@
 									<article class="article-mini">
 										<div class="inner">
 											<figure>
-												<a href="single.html">
+												<a href={% url 'insight_post_page' art.id  %}>
 													<img src={{art.image.url}} alt="Sample Article">
 												</a>
 											</figure>
 											<div class="padding">
-												<h1><a href="single.html">{{art.title|truncatechars:45}}</a></h1>
+												<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:45}}</a></h1>
 												<div class="detail">
 													<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 													<div class="time">{{art.date}}</div>
