--- a/core/templates/front-end/insights/index.html
+++ b/core/templates/front-end/insights/index.html
@@ -101,7 +101,7 @@
 													<div class="time">{{art.date}}</div>
 													<div class="category"><a href="category.html">{{art.catagory}}</a></div>
 												</div>
-												<h2><a href={% url 'insight_post_page' art.id  %}>Duis aute irure dolor in reprehenderit in voluptate</a></h2>
+												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
