--- a/core/templates/front-end/parts/header.html
+++ b/core/templates/front-end/parts/header.html
@@ -9,7 +9,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="/#about">About</a></li>
+          <li><a href="/insights/about">About</a></li>
           <li><a href="/#services">Services</a></li>
           <li><a href="/#portfolio">Portfolio</a></li>
           <li><a href="/insights">Insights</a></li>
