--- a/core/templates/front-end/parts/main.html
+++ b/core/templates/front-end/parts/main.html
@@ -19,7 +19,7 @@
             <p>Answer two questions and put our thinking to work on your challenges.</p>
             <h3>1.What is your Industry?  </h3>
             <div  class="row" style="margin-top:10px">
-              {%for category in questions%}
+              {%for category in data.questions%}
               <div style="margin-top:15px" class="col-md-3">
                 <button class="btn btn-danger q1"  > {{category.name}} </button>
               </div>
@@ -139,8 +139,8 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Services</span>
-          <h2>Services</h2>
+          <span>Success Stories</span>
+          <h2>Success Stories</h2>
           <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
         </div>
 
@@ -148,7 +148,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Lorem Ipsum</a></h4>
+              <h4><a href="/insights/about">Lorem Ipsum</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
@@ -156,7 +156,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="150">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Sed ut perspiciatis</a></h4>
+              <h4><a href="/insights/about">Sed ut perspiciatis</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
@@ -164,7 +164,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Magni Dolores</a></h4>
+              <h4><a href="/insights/about">Magni Dolores</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
             </div>
           </div>
@@ -172,7 +172,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="450">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Nemo Enim</a></h4>
+              <h4><a href="/insights/about">Nemo Enim</a></h4>
               <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
             </div>
           </div>
@@ -180,7 +180,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="600">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Dele cardo</a></h4>
+              <h4><a href="/insights/about">Dele cardo</a></h4>
               <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
             </div>
           </div>
@@ -188,7 +188,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="fade-up" data-aos-delay="750">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Divera don</a></h4>
+              <h4><a href="/insights/about">Divera don</a></h4>
               <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
             </div>
           </div>
@@ -198,7 +198,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Cta Section ======= -->
+    <!-- ======= Cta Section =======
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
@@ -211,7 +211,7 @@
       </div>
     </section><!-- End Cta Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- ======= Portfolio Section =======
     <section id="portfolio" class="portfolio">
       <div class="container">
 
@@ -329,7 +329,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Pricing Section ======= -->
+    <!-- ======= Pricing Section =======
     <section id="pricing" class="pricing">
       <div class="container">
 
@@ -397,7 +397,7 @@
       </div>
     </section><!-- End Pricing Section -->
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= Team Section =======
     <section id="team" class="team">
       <div class="container">
 
@@ -463,7 +463,28 @@
 
       </div>
     </section><!-- End Team Section -->
+<section id="latest-insights-main" class="services">
+      <div class="container">
 
+        <div class="section-title">
+          <span>Latest Insights</span>
+          <h2>Latest Insights</h2>
+          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+        </div>
+
+        <div class="row">
+          {%for art in data.latest%}
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="icon-box">
+              <h4><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h4>
+              <p>{{art.body|truncatechars:50}}</p>
+            </div>
+          </div>
+          {%endfor%}
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -539,7 +560,10 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section>
+   <!-- End Contact Section -->
+
+
 
   </main>
 <script src="/static/assets/frontend/assets/js/question-answer-ajax.js"></script>
