--- a/core/templates/front-end/parts/sidebar-menu.html
+++ b/core/templates/front-end/parts/sidebar-menu.html
@@ -76,8 +76,11 @@
 <!--  <a href="#">Clients</a>-->
 <!--  <a href="#">Contact</a>-->
   <a href="/">Home</a>
-  <a href="/insights/about">About</a>
+  <a href="/about">About</a>
+  <a href="/portfolio">Portfolio</a>
   <a href="/insights">Insights</a>
-  <a href="/#contact">Contact</a>
+  <a href="/pricing">Pricing</a>
+  <a href="/team">Team</a>
+  <a href="/contact">Contact</a>
 
 </div>
