--- a/core/templates/front-end/parts/header.html
+++ b/core/templates/front-end/parts/header.html
@@ -9,8 +9,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="/insights/about">About</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
           <li><a href="/insights">Insights</a></li>
+          <li><a href="/pricing">Pricing</a></li>
+          <li><a href="/team">Team</a></li>
           <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -28,7 +31,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a href="/#contact">Contact</a></li>
+          <li><a href="/contact">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
