red folder in progress

--- a/core/templates/front-end/parts/topbar.html
+++ b/core/templates/front-end/parts/topbar.html
@@ -10,7 +10,10 @@
 <!--        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>-->
         <a href="#" class="" style="color:white"><i class="icofont-globe" style="margin-right:3px"></i>Global | English</a>
         <a href="#" class="" style="color:white"><i class=""></i>|</a>
-        <a href="#" class="" style="color:white"><i class="icofont-folder" style="color:#cc1616; margin-right:3px"></i><i/>RED FOLDER</a>
-      </div>
+<!--        <a href="#" class="" style="color:white"><i class="icofont-folder" style="color:#cc1616; margin-right:3px"></i><i/>RED FOLDER</a>-->
+          <div id="red-ajax" style="float:right">
+            {%include 'front-end/parts/red-folder.html'%}
+          </div>
+          </div>
     </div>
   </div>
