--- a/core/templates/front-end/template.html
+++ b/core/templates/front-end/template.html
@@ -29,7 +29,8 @@
 
   <link rel="stylesheet" href="/static/assets/insights/css/insight-style.css">
   <link rel="stylesheet" href="/static/assets/insights/css/skins/all.css">
-
+  <link rel="stylesheet" href="/static/assets/frontend/assets/css/red-dropdown.css">
+  <script src="/static/assets/frontend/assets/vendor/jquery/jquery.min.js"></script>
   <!-- =======================================================
   * Template Name: Day - v2.2.1
   * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
@@ -72,6 +73,7 @@
 
   <!-- Template Main JS File -->
   <script src="/static/assets/frontend/assets/js/main.js"></script>
+
   <script>
   function openNav() {
     document.getElementById("mySidebar").style.width = "250px";
