--- a/core/templates/front-end/insights/index.html
+++ b/core/templates/front-end/insights/index.html
@@ -104,7 +104,7 @@
 												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
-													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
+													<a href="#" class="love"><i class="icofont-book-mark"><span style="display:none">{{art.id}}</span></i></a>
 													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -134,7 +134,7 @@
 												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
-													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
+													<a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a>
 													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -186,7 +186,7 @@
 								</h1>
 								<div class="body-col vertical-slider" data-max="4" data-nav="#hot-news-nav" data-item="article">
 									{% for art in hot%}
-									<article class="article-mini">
+									<article class="article-mini" style="width:90%;float:left">
 										<div class="inner">
 											<figure>
 												<a href={% url 'insight_post_page' art.id  %}>
@@ -202,6 +202,7 @@
 											</div>
 										</div>
 									</article>
+									<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
 									{%endfor%}
 								</div>
 							</div>
@@ -228,7 +229,7 @@
 										<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title}}</a></h1>
 										<p>{{art.body|truncatechars:100}}</p>
 										<footer>
-											<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>273</div></a>
+											<a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a>
 											<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 												<div>More</div>
 												<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -246,7 +247,7 @@
 							<h1 class="aside-title">Popular <a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
 							<div class="aside-body">
 								{%for art in popular%}
-								<article class="article-mini">
+								<article style="width:90%;float-left" class="article-mini">
 									<div class="inner">
 										<figure>
 											<a href={% url 'insight_post_page' art.id  %}>
@@ -258,6 +259,7 @@
 										</div>
 									</div>
 								</article>
+								<div style="width:9%;float:right;"><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
 								{%endfor%}
 							</div>
 						</aside>
@@ -308,27 +310,29 @@
 														<div class="category"><a href={% url 'insight_catagory_page' art.catagory  %}>{{art.catagory}}</a></div>
 													</div>
 													<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:45}}</a></h1>
-													<p>{{art.body|truncatechars:80}}</p>
+													<p style="width:90%;float:left;">{{art.body|truncatechars:80}}</p>
+													<div><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
 												</div>
 											</div>
 										</article>
 										<div class="line"></div>
 									{%endif%}
 									<article class="article-mini">
-										<div class="inner">
+										<div style="width:90%;float:left" class="inner">
 											<figure>
 												<a href={% url 'insight_post_page' art.id  %}>
 													<img src={{art.image.url}} alt="Sample Article">
 												</a>
 											</figure>
 											<div class="padding">
-												<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:45}}</a></h1>
+												<h1><a style="font-size:12px" href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:30}}</a></h1>
 												<div class="detail">
-													<div class="category"><a href={% url 'insight_catagory_page' art.catagory  %}>{{art.catagory}}</a></div>
-													<div class="time">{{art.date}}</div>
+													<div class="category"><a style="font-size:8px" href={% url 'insight_catagory_page' art.catagory  %}>{{art.catagory}}</a></div>
+													<div class="time">{{art.date|date:"M d, Y" }}</div>
 												</div>
 											</div>
 										</div>
+										<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark"><span style="display:none">{{art.id}}</span></i></a></div>
 									</article>
 									{%endfor%}
 								</div>
@@ -546,4 +550,26 @@
 		</section>
 		</div>
     </div>
+<script>
+	$(".icofont-book-mark").click(function(e) {
+    e.preventDefault();
+    var bookmark_id = $(this).find("span").text().trim();
+    $.ajax({
+        type: "POST",
+        url: "/insights/bookmark-ajax",
+        dataType: 'json',
+        data:{
+            'bookmark_id':bookmark_id,
+        },
+        headers:{
+        "X-CSRFToken": '{{ csrf_token }}'
+    }
+    }).done(function(data) {
+            $("#red-ajax").html(data.html_table);
+
+    });
+});
+
+
+</script>
 {% endblock content %}
