--- a/core/templates/front-end/insights/category.html
+++ b/core/templates/front-end/insights/category.html
@@ -41,7 +41,7 @@
 		                </p>
 		                <footer>
 		                  <a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>237</div></a>
-		                  <a class="btn btn-primary more" href="single.html">
+		                  <a class="btn btn-primary more" href="{% url 'insight_post_page' art.id  %}">
 		                    <div>More</div>
 		                    <div><i class="ion-ios-arrow-thin-right"></i></div>
 		                  </a>
