--- a/core/templates/front-end/insights/contact-us.html
+++ b/core/templates/front-end/insights/contact-us.html
@@ -70,7 +70,14 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="form-check" style="">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                *I have read the Privacy Policy and agree to its terms.
+              </label>
+            </div>
             </form>
+
           </div>
 
         </div>
