--- a/core/templates/front-end/insights/index.html
+++ b/core/templates/front-end/insights/index.html
@@ -104,7 +104,7 @@
 												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
-													<a href="#" class="love"><i class="icofont-book-mark"><span style="display:none">{{art.id}}</span></i></a>
+													<a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a>
 													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -134,7 +134,7 @@
 												<h2><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:50}}</a></h2>
 												<p>{{art.body|truncatechars:100}}</p>
 												<footer>
-													<a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a>
+													<a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a>
 													<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -202,7 +202,7 @@
 											</div>
 										</div>
 									</article>
-									<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
+									<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a></div>
 									{%endfor%}
 								</div>
 							</div>
@@ -229,7 +229,7 @@
 										<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title}}</a></h1>
 										<p>{{art.body|truncatechars:100}}</p>
 										<footer>
-											<a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a>
+											<a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a>
 											<a class="btn btn-primary more" href={% url 'insight_post_page' art.id  %}>
 												<div>More</div>
 												<div><i class="ion-ios-arrow-thin-right"></i></div>
@@ -259,7 +259,7 @@
 										</div>
 									</div>
 								</article>
-								<div style="width:9%;float:right;"><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
+								<div style="width:9%;float:right;"><a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a></div>
 								{%endfor%}
 							</div>
 						</aside>
@@ -311,7 +311,7 @@
 													</div>
 													<h1><a href={% url 'insight_post_page' art.id  %}>{{art.title|truncatechars:45}}</a></h1>
 													<p style="width:90%;float:left;">{{art.body|truncatechars:80}}</p>
-													<div><a href="#" class="love"><i class="icofont-book-mark" ><span style="display:none">{{art.id}}</span></i></a></div>
+													<div><a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a></div>
 												</div>
 											</div>
 										</article>
@@ -332,7 +332,7 @@
 												</div>
 											</div>
 										</div>
-										<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark"><span style="display:none">{{art.id}}</span></i></a></div>
+										<div style="width:9%;float:left"><a href="#" class="love"><i class="icofont-book-mark {%if art.is_bookmark%} bookmarked {%endif%}" {%if art.is_bookmark%} style="color:#cc1616" {%endif%}><span style="display:none">{{art.id}}</span></i></a></div>
 									</article>
 									{%endfor%}
 								</div>
@@ -553,7 +553,27 @@
 <script>
 	$(".icofont-book-mark").click(function(e) {
     e.preventDefault();
+    if ($(this).hasClass('bookmarked')) {
+		var bookmark_id = $(this).find("span").text().trim();
+		$(this).css({"color":"#989898"});
+		$(this).removeClass('bookmarked');
+		$.ajax({
+			type: "POST",
+			url: "/insights/bookmark-delete-ajax",
+			dataType: 'json',
+			data:{
+				'bookmark_id':bookmark_id,
+			},
+			headers:{
+			"X-CSRFToken": '{{ csrf_token }}'
+		}
+		}).done(function(data) {
+				$("#red-ajax").html(data.html_table);
+		});
+	}else{
     var bookmark_id = $(this).find("span").text().trim();
+    $(this).css({"color":"#cc1616"})
+    $(this).addClass('bookmarked');
     $.ajax({
         type: "POST",
         url: "/insights/bookmark-ajax",
@@ -568,7 +588,9 @@
             $("#red-ajax").html(data.html_table);
 
     });
+    }
 });
+
 
 
 </script>
