--- a/core/templates/front-end/parts/footer.html
+++ b/core/templates/front-end/parts/footer.html
@@ -1,4 +1,11 @@
  <!-- ======= Footer ======= -->
+ <style>
+   #footer .footer-top .footer-info{
+    margin-bottom:0px;
+    background:#0c0c0c;
+    border-top:0px;
+   }
+ </style>
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -6,18 +13,18 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Day</h3>
-              <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
-              </p>
+              <h3>Logo</h3>
+<!--              <p>-->
+<!--                A108 Adam Street <br>-->
+<!--                NY 535022, USA<br><br>-->
+<!--                <strong>Phone:</strong> +1 5589 55488 55<br>-->
+<!--                <strong>Email:</strong> info@example.com<br>-->
+<!--              </p>-->
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+                <a href="#" class="google-plus"><i class="bx bxl-youtube"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
@@ -51,8 +58,16 @@
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
+            <div class="form-check" style="padding-left:0px">
+              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+              <label class="form-check-label" for="flexCheckDefault">
+                *I have read the Privacy Policy and agree to its terms.
+              </label>
+            </div>
+            <p></p>
 
           </div>
+
 
         </div>
       </div>
