--- a/core/templates/front-end/parts/header-insight.html
+++ b/core/templates/front-end/parts/header-insight.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container d-flex align-items-center">
     <button class="openbtn" onclick="openNav()">☰</button>
-      <h1 class="logo mr-auto"><a href="index.html">Day</a></h1>
+      <h1 class="logo mr-auto"><a href="/">Day</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="/static/assets/frontend/assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
