--- a/core/templates/front-end/parts/sidebar-menu.html
+++ b/core/templates/front-end/parts/sidebar-menu.html
@@ -77,7 +77,7 @@
 <!--  <a href="#">Contact</a>-->
   <a href="/">Home</a>
   <a href="/about">About</a>
-  <a href="/portfolio">Portfolio</a>
+<!--  <a href="/portfolio">Portfolio</a>-->
   <a href="/insights">Insights</a>
   <a href="/pricing">Pricing</a>
   <a href="/team">Team</a>
