--- a/core/templates/front-end/insights/index.html
+++ b/core/templates/front-end/insights/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="insight-main" style="">
-            <div style="padding-top:100px; background-color:black"></div>
+            <div style="padding-top:100px; background-color:white"></div>
 		<div class="container">
     		<section class="home">
 			<div class="container">
