--- a/core/templates/front-end/insights/portfolio.html
+++ b/core/templates/front-end/insights/portfolio.html
@@ -1,7 +1,7 @@
 {% extends "front-end/template.html" %}
 {% block content %}
 <!-- ======= Portfolio Section =======-->
-    <div class="headercover" style="height:110px;background-color:black"></div>
+    <div class="headercover" style="height:110px;background-color:white"></div>
     <section id="portfolio" class="portfolio">
       <div class="container">
 
