--- a/core/templates/front-end/insights/post-page.html
+++ b/core/templates/front-end/insights/post-page.html
@@ -1,7 +1,7 @@
 {% extends "front-end/template.html" %}
 
 {% block content %}
-	<div style="padding-top:110px; background-color:black"></div>
+	<div style="padding-top:110px; background-color:white"></div>
     <section class="single">
 			<div class="container">
 				<div class="row">
