--- a/core/templates/front-end/insights/pricing.html
+++ b/core/templates/front-end/insights/pricing.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!-- ======= Pricing Section =======-->
 
-    <div class="headercover" style="height:110px;background-color:black"></div>
+    <div class="headercover" style="height:110px;background-color:white"></div>
     <section id="pricing" class="pricing">
       <div class="container">
 
@@ -23,9 +23,12 @@
                 <li>{{tags}}</li>
                 {%endfor%}
               </ul>
-              <div class="btn-wrap">
+              <div class="pricing-button">
+                <div class="btn-wrap">
                 <a href="#" class="btn-buy">Buy Now</a>
               </div>
+              </div>
+
             </div>
           </div>
         {%endfor%}
