--- a/core/templates/front-end/insights/success_stories.html
+++ b/core/templates/front-end/insights/success_stories.html
@@ -1,7 +1,7 @@
 {% extends "front-end/template.html" %}
 {% block content %}
     <!-- ======= Services Section ======= -->
-    <div class="headercover" style="height:110px;background-color:black"></div>
+    <div class="headercover" style="height:110px;background-color:white"></div>
     <section id="services1" class="services">
       <div class="container">
 
