--- a/core/templates/front-end/parts/footer.html
+++ b/core/templates/front-end/parts/footer.html
@@ -2,7 +2,7 @@
  <style>
    #footer .footer-top .footer-info{
     margin-bottom:0px;
-    background:#0c0c0c;
+    background:white;
     border-top:0px;
    }
  </style>
@@ -44,11 +44,9 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">software development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Enterprise technology</a></li>
             </ul>
           </div>
 
