--- a/core/static/assets/frontend/assets/css/style.css
+++ b/core/static/assets/frontend/assets/css/style.css
@@ -8,6 +8,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+p,label{
+color:black;
+}
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
@@ -173,7 +176,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled {
   top: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background:white;
+  /*background: rgba(0, 0, 0, 0.9);*/
 }
 
 #header .logo {
@@ -895,6 +899,7 @@ section {
   border-radius: 8px;
   position: relative;
   overflow: hidden;
+  height:500px;
 }
 
 .pricing .box h3 {
@@ -1317,7 +1322,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #0c0c0c;
+  background: white;
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px;
@@ -1329,8 +1334,8 @@ section {
 
 #footer .footer-top .footer-info {
   margin-bottom: 15px;
-  background: #191919;
-  color: #fff;
+  background: white;
+  color: black;
   border-top: 4px solid #cc1616;
   text-align: center;
   padding: 30px 20px;
@@ -1375,7 +1380,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: 600;
-  color: #fff;
+  color: black;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1408,7 +1413,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #fff;
+  color: black;
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
@@ -1420,7 +1425,7 @@ section {
 
 #footer .footer-top .footer-newsletter form {
   margin-top: 30px;
-  background: #fff;
+  background: black;
   padding: 6px 10px;
   position: relative;
   border-radius: 4;
@@ -1453,6 +1458,7 @@ section {
 
 #footer .copyright {
   border-top: 1px solid #262626;
+  color:black;
   text-align: center;
   padding-top: 30px;
 }
@@ -1472,4 +1478,14 @@ section {
   #footer .footer-top .footer-info {
     margin: -20px 0 30px 0;
   }
+}
+
+.col-md-3 button{
+    width:100%;
+}
+
+.pricing-button{
+    position:absolute;
+    bottom:0;
+    width:100%
 }
