--- a/core/templates/front-end/insights/contact-us.html
+++ b/core/templates/front-end/insights/contact-us.html
@@ -1,7 +1,7 @@
 {% extends "front-end/template.html" %}
 {% block content %}
 <!-- ======= Contact Section ======= -->
-    <div class="headercover" style="height:110px;background-color:black"></div>
+    <div class="headercover" style="height:110px;background-color:white"></div>
     <section id="contact" class="contact">
       <div class="container">
 
