--- a/core/templates/front-end/insights/insight-bookmark-page.html
+++ b/core/templates/front-end/insights/insight-bookmark-page.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<link rel="stylesheet" href="/static/assets/frontend/assets/css/bootstrap.min-pagination.css">
-	<div style="padding-top:110px; background-color:black"></div>
+	<div style="padding-top:110px; background-color:white"></div>
 
 		<section class="category">
 		  <div class="container">
