--- a/core/templates/front-end/template.html
+++ b/core/templates/front-end/template.html
@@ -79,16 +79,16 @@
     document.getElementById("mySidebar").style.width = "250px";
     document.getElementById("main").style.marginLeft = "250px";
     document.getElementById("topbar").style.position= "relative";
-    document.getElementById("topbar").style.background= "black";
+    document.getElementById("topbar").style.background= "white";
     document.getElementById("header").style.position= "relative";
-    document.getElementById("header").style.background= "black";
+    document.getElementById("header").style.background= "white";
     document.getElementById("header").style.top= "0";
   }
 
   function closeNav() {
     document.getElementById("mySidebar").style.width = "0";
     document.getElementById("main").style.marginLeft= "0";
-    document.getElementById("header").style.removeAttribute('style')
+    $('#header').removeAttr('style');
     document.getElementById("topbar").style.position= "fixed";
     document.getElementById("header").style.position= "fixed";
 
