--- a/core/templates/front-end/insights/pricing.html
+++ b/core/templates/front-end/insights/pricing.html
@@ -7,9 +7,9 @@
       <div class="container">
 
         <div class="section-title">
-          <span>Pricing</span>
-          <h2>Pricing</h2>
-          <p>Sit sint consectetur velit quisquam cupiditate impedit suscipit alias</p>
+          <span>{{pricing_page.title}}</span>
+          <h2>{{pricing_page.title}}</h2>
+          <p>{{pricing_page.sub_title}}</p>
         </div>
 
         <div class="row">
