--- a/core/templates/front-end/parts/header.html
+++ b/core/templates/front-end/parts/header.html
@@ -16,8 +16,8 @@
           </li>
           <li class="drop-down"><a href="">ImpacX</a>
             <ul>
-              <li><a href="/pricing">Web Hosting</a></li>
-              <li><a href="/pricing">Reseller Hosting</a></li>
+              <li><a href="/pages/web_hosting">Web Hosting</a></li>
+              <li><a href="/pages/reseller_hosting">Reseller Hosting</a></li>
               <li><a href="/login">Client Portal</a></li>
             </ul>
           </li>
