impacx + Digitalization and logo have been added

--- a/core/templates/front-end/parts/header.html
+++ b/core/templates/front-end/parts/header.html
@@ -2,19 +2,19 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
     <button class="openbtn" onclick="openNav()">☰</button>
-      <h1 class="logo mr-auto"><a href="/">Day</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="/static/assets/frontend/assets/img/logo.png" alt="" class="img-fluid"></a>-->
+<!--      <h1 class="logo mr-auto"><a href="/">Day</a></h1>-->
+<!--       Uncomment below if you prefer to use an image logo -->
+       <a href="/" class="logo mr-auto"><img src="/static/assets/frontend/assets/img/logo.png" alt="" class="img-fluid"></a>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="/">Home</a></li>
           <li class="drop-down"><a href="">Consulting Services</a>
             <ul>
-              <li><a href="#">Digitalization</a></li>
+              <li><a href="/pages/digitialization">Digitalization</a></li>
             </ul>
           </li>
-          <li class="drop-down"><a href="">ImpacX</a>
+          <li class="drop-down"><a href="/pages/impacx">ImpacX</a>
             <ul>
               <li><a href="/pages/web_hosting">Web Hosting</a></li>
               <li><a href="/pages/reseller_hosting">Reseller Hosting</a></li>
