--- a/core/static/assets/frontend/assets/css/style.css
+++ b/core/static/assets/frontend/assets/css/style.css
@@ -25,8 +25,20 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+/*h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+}*/
+
+h1{
+    font-family:"Graphik",Helvetica,sans-serif,Lucida Sans Unicode;
+    font-weight:500;
+    color:black;
+    font-size:2.5rem;
+}
+p{
+  color:black;
+    font-size:1.125rem;
+    font-family:"Graphik",Helvetica,sans-serif,Lucida Sans Unicode;
 }
 
 /*--------------------------------------------------------------
@@ -1488,4 +1500,71 @@ section {
     position:absolute;
     bottom:0;
     width:100%
+}
+#hero{
+height:83vh;
+padding:0px;
+}
+#hero img{
+    height:100%;
+    max-width:none;
+    object-fit:cover;
+    width:100%;
+    position:absolute;
+}
+#hero .container{
+    border:3px solid white;
+    width:40%;
+    margin-left:3%;
+    margin-top:40px;
+    padding:30px;
+    background:white;
+    color:black;
+}
+#hero h1{
+    font-family:"Graphik",Helvetica,sans-serif,Lucida Sans Unicode;
+    font-weight:500;
+    color:black;
+    font-size:2.5rem;
+}
+#hero p{
+    color:black;
+    font-size:1.125rem;
+    font-family:"Graphik",Helvetica,sans-serif,Lucida Sans Unicode;
+}
+
+.why-us .box{
+padding:20px;
+height: 350px;
+}
+.why-us .box h4{
+margin:0px;
+margin-bottom:8px;
+text-align:center;
+}
+
+.impacx-article{
+height:400px;
+}
+.impacx-article .container .row article .inner{
+    height:350px;
+}
+.impacx-article .container .row article figure{
+    height:45%;
+}
+
+.impacx-contact-dd h3,h4{
+    font-weight:500;
+}
+
+.impacx-contact-dd h4{
+    font-weight:400;
+}
+
+
+.impecx-select{
+    width: 80%;
+    height: 49px;
+    border: white;
+    border-bottom: 3px solid #cc1616;
 }
