--- a/core/templates/front-end/insights/impax-page.html
+++ b/core/templates/front-end/insights/impax-page.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "front-end/template.html" %}
 
-</body>
-</html>
+{% block content %}
+<style>
+    h1{
+    font-family:"Graphik",Helvetica,sans-serif,Lucida Sans Unicode;
+    font-weight:500;
+    color:black;
+    font-size:2.5rem;
+}
+</style>
+    {% with impacx_data as impacx %}
+        {% include "front-end/parts/hero-box.html" %}
+    {% endwith%}
+    {% with impacx_data as impacx %}
+        {% include "front-end/parts/impacx-blog-section.html" %}
+    {% endwith%}
+    {% include "front-end/parts/delivery-platform.html" %}
+    {% with latest_posts as impacx %}
+        {% include "front-end/parts/impacx-articles.html" %}
+    {% endwith %}
+    {% include "front-end/parts/impacx-contact-us.html" %}
+
+{% endblock content %}
