--- a/core/templates/front-end/parts/footer.html
+++ b/core/templates/front-end/parts/footer.html
@@ -13,7 +13,9 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Logo</h3>
+              <a href="/" class="logo mr-auto"><img src="/static/assets/frontend/assets/img/logo-bottom.png" alt="" class="img-fluid"></a>
+
+<!--              <h3>Logo</h3>-->
 <!--              <p>-->
 <!--                A108 Adam Street <br>-->
 <!--                NY 535022, USA<br><br>-->
